# nj_220_2_7

./: README.md
nj_220_2_7_configurations/: CMakeLists.txt  package.xml
nj_220_2_7_configurations/config/: controllers_configurations.yaml  fake_level1_hw.yaml  level0_controllers.yaml  level0_gazebo_hw.yaml  level0_hw.yaml  level1_controllers.yaml  level1_hw.yaml
nj_220_2_7_configurations/launch/: control.rviz  robot_control.launch  rviz.launch  simulation.launch
nj_220_2_7_description/: CMakeLists.txt  package.xml
nj_220_2_7_description/config/: view_cell.rviz
nj_220_2_7_description/launch/: display.launch  upload.launch
nj_220_2_7_description/meshes/: link_1.STL  link_2.STL  link_2_2.STL  link_4.STL  link_6.STL  motor_50.STL  motor_90.STL
nj_220_2_7_description/urdf/: nj_220_2_7.xacro  nj_220_2_7_alone.sdf.xacro  nj_220_2_7_alone.urdf.xacro  nj_220_2_7_alone.xacro  nj_220_2_7_gazebo.xacro  nj_220_2_7_pybullet.urdf  (+5 more)
nj_220_2_7_gazebo/: CMakeLists.txt  package.xml
nj_220_2_7_gazebo/config/: nj_220_2_7_control.yaml
nj_220_2_7_gazebo/launch/: nj_220_2_7.launch  nj_220_2_7_control.launch  nj_220_2_7_world.launch
nj_220_2_7_gazebo/meshes/: base_link.STL  external_part.STL  link_1.STL  link_2.STL  link_2_1.STL  link_2_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  motor_80.STL
nj_220_2_7_gazebo/urdf/: nj_220_2_7.xacro  nj_220_2_7_alone.xacro  nj_220_2_7_transmission.xacro
nj_220_2_7_gazebo/worlds/: nj_220_2_7_alone.world
nj_220_2_7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nj_220_2_7_pybullet/: CMakeLists.txt  package.xml
(+31 files in other folders)
